fix: Replaces cast with URI.create()